logs/offboard/build.make.022.log.stderr
/home/nvidia/kd_px4_can/src/offboard/src/offboard_node.cpp: In function ‘int main(int, char**)’:
/home/nvidia/kd_px4_can/src/offboard/src/offboard_node.cpp:49:19: error: ‘struct mavros_msgs::SetMode’ has no member named ‘requst’
     offb_set_mode.requst.custom_mode = "OFFBOARD";
                   ^
make[2]: *** [CMakeFiles/offboard_node.dir/src/offboard_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/offboard_node.dir/all] Error 2
make: *** [all] Error 2
